<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.pottery</groupId>
	<artifactId>pottery-orders</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>pottery-orders</name>
	<description>Pottery Orders App with Java, React, and Snowflake</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>

		<dependency>
			<groupId>net.snowflake</groupId>
			<artifactId>snowflake-jdbc</artifactId>
			<version>3.16.0</version> <!-- or latest -->
		</dependency>
	</dependencies>

	<repositories>

		<repository>
			<id>snowflake</id>
			<name>Snowflake JDBC Repository</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>

		<repository>
			<id>snowflake-maven</id>
		<url>https://repo1.maven.org/maven2/</url>
		</repository>

	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			<configuration>
				<jvmArguments>-Dnet.snowflake.jdbc.enableArrow=0</jvmArguments>
				<jvmArguments>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmArguments>
			</configuration>
			</plugin>
		</plugins>
	</build>

</project>
